--- a/style2.css
+++ b/style2.css
@@ -61,7 +61,7 @@ img {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: transparent;
+  background-color: black;
   /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
   z-index: 100;
   padding: 1rem 5%;
